--- a/Timer-Weather/Timer-Weather/Base.lproj/Main.storyboard
+++ b/Timer-Weather/Timer-Weather/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TeL-WR-vh0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TeL-WR-vh0">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1158,44 +1158,177 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wDg-4L-lWH">
-                                <rect key="frame" x="63" y="94" width="44" height="44"/>
+                                <rect key="frame" x="63" y="86" width="60" height="60"/>
+                                <gestureRecognizers/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="XWd-VF-R6M"/>
                                     <constraint firstAttribute="width" secondItem="wDg-4L-lWH" secondAttribute="height" multiplier="1:1" id="nIz-S2-whc"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <state key="normal" title="-1">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="minusAction:" destination="fRr-LH-QwK" eventType="touchUpInside" id="AJB-8K-gEf"/>
+                                    <outletCollection property="gestureRecognizers" destination="1Ni-II-yYv" appends="YES" id="vT4-Xz-f57"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UdA-A7-Lbt">
-                                <rect key="frame" x="267" y="94" width="44" height="44"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <rect key="frame" x="251" y="86" width="60" height="60"/>
+                                <gestureRecognizers/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <state key="normal" title="+1">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="addAction:" destination="fRr-LH-QwK" eventType="touchUpInside" id="5wa-aQ-5KO"/>
+                                    <outletCollection property="gestureRecognizers" destination="0qn-gE-4GV" appends="YES" id="BSv-51-lUQ"/>
+                                </connections>
                             </button>
+                            <view hidden="YES" alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vCY-lL-VCW">
+                                <rect key="frame" x="67" y="-60" width="240" height="120"/>
+                                <subviews>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AJU-lR-i0B">
+                                        <rect key="frame" x="159" y="52" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="40">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="selectionAction:" destination="fRr-LH-QwK" eventType="touchUpInside" id="P0L-Kd-gkE"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4a-EM-5QX">
+                                        <rect key="frame" x="202" y="90" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="60">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="selectionAction:" destination="fRr-LH-QwK" eventType="touchUpInside" id="YKW-2P-0sn"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZz-Pz-JZr">
+                                        <rect key="frame" x="38" y="52" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="10">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="selectionAction:" destination="fRr-LH-QwK" eventType="touchUpInside" id="CSY-7c-Gej"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mwH-dc-NdJ">
+                                        <rect key="frame" x="8" y="91" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" title="5">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="selectionAction:" destination="fRr-LH-QwK" eventType="touchUpInside" id="sZV-sa-9K2"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xrR-h1-5YC">
+                                        <rect key="frame" x="105" y="36" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="20">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="selectionAction:" destination="fRr-LH-QwK" eventType="touchUpInside" id="EKY-ZI-PlZ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="9JB-ah-Q2g"/>
+                                    <constraint firstAttribute="height" constant="120" id="x7H-hX-jkv"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Ddh-TJ-9R7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="wDg-4L-lWH" secondAttribute="trailing" symbolic="YES" id="1eU-1P-cYy"/>
+                            <constraint firstItem="Ddh-TJ-9R7" firstAttribute="top" secondItem="vCY-lL-VCW" secondAttribute="bottom" constant="15" id="0Bu-7e-ytN"/>
+                            <constraint firstItem="Ddh-TJ-9R7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="wDg-4L-lWH" secondAttribute="trailing" constant="8" symbolic="YES" id="1eU-1P-cYy"/>
                             <constraint firstItem="wDg-4L-lWH" firstAttribute="centerY" secondItem="ITP-dy-EkI" secondAttribute="centerY" id="41y-lX-m20"/>
                             <constraint firstAttribute="trailing" secondItem="UdA-A7-Lbt" secondAttribute="trailing" constant="64" id="4tl-de-oXe"/>
                             <constraint firstItem="UdA-A7-Lbt" firstAttribute="top" secondItem="wDg-4L-lWH" secondAttribute="top" id="AAq-ur-GbR"/>
+                            <constraint firstItem="vCY-lL-VCW" firstAttribute="centerX" secondItem="ITP-dy-EkI" secondAttribute="centerX" id="ADa-i6-TYL"/>
                             <constraint firstItem="Ddh-TJ-9R7" firstAttribute="centerY" secondItem="ITP-dy-EkI" secondAttribute="centerY" id="EyX-Vs-sad"/>
                             <constraint firstItem="UdA-A7-Lbt" firstAttribute="width" secondItem="wDg-4L-lWH" secondAttribute="width" id="MDC-F4-NXi"/>
                             <constraint firstItem="wDg-4L-lWH" firstAttribute="leading" secondItem="ITP-dy-EkI" secondAttribute="leading" constant="63" id="Oah-xB-YtS"/>
                             <constraint firstItem="Ddh-TJ-9R7" firstAttribute="centerX" secondItem="ITP-dy-EkI" secondAttribute="centerX" id="Tb7-hm-y1s"/>
                             <constraint firstItem="UdA-A7-Lbt" firstAttribute="height" secondItem="wDg-4L-lWH" secondAttribute="height" id="V9o-Re-MJZ"/>
-                            <constraint firstItem="UdA-A7-Lbt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ddh-TJ-9R7" secondAttribute="trailing" symbolic="YES" id="hPq-8h-0Ts"/>
+                            <constraint firstItem="UdA-A7-Lbt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ddh-TJ-9R7" secondAttribute="trailing" constant="8" symbolic="YES" id="hPq-8h-0Ts"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hmc-KS-BsA"/>
                     </view>
                     <connections>
                         <outlet property="addButton" destination="UdA-A7-Lbt" id="J7s-3a-abv"/>
                         <outlet property="minusButton" destination="wDg-4L-lWH" id="OLz-73-Nsy"/>
+                        <outlet property="selectionView" destination="vCY-lL-VCW" id="iaF-Jg-uyH"/>
+                        <outletCollection property="selectionButtons" destination="xrR-h1-5YC" collectionClass="NSMutableArray" id="KyQ-vs-IXG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SbG-Wc-rje" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="1Ni-II-yYv">
+                    <connections>
+                        <action selector="minusButtonLongPressAction:" destination="fRr-LH-QwK" id="QoM-n8-7lu"/>
+                    </connections>
+                </pongPressGestureRecognizer>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="0qn-gE-4GV">
+                    <connections>
+                        <action selector="addButtonLongPressAction:" destination="fRr-LH-QwK" id="3AT-nu-zco"/>
+                    </connections>
+                </pongPressGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-370" y="642"/>
         </scene>
